# ANST-Kit

./: .dockerignore  .env.example  .gitignore  CITATION.cff  Dockerfile  LICENSE  README.md  docker-compose.yaml  dvc.yaml  params.yaml  pyproject.toml
.github/workflows/: ci.yml
metrics/: ablation_results.json  benchmark.json
models/: .gitignore
src/anstkit/: __main__.py  agent_demo.py  config.py  orchestrator.py  physics_pinn.py  plant_graph.py  policy.py  schemas.py  tracking.py
src/anstkit/audit/: __init__.py  events.py  store.py
src/anstkit/dashboard/: __init__.py  app.py
src/anstkit/evaluation/: __init__.py  ablations.py  metrics.py  scenarios.py
src/anstkit/governance/: __init__.py  deployment_modes.py
src/anstkit/graph/: __init__.py  base.py  graphrag_backend.py  networkx_backend.py
src/anstkit/ingestion/: __init__.py  dexpi_parser.py  topology_extractor.py
src/anstkit/services/: __init__.py  orchestrator_svc.py  schemas.py
tests/: test_cli_export.py  test_graphplant_dexpi.py  test_orchestrator.py  test_orchestrator_audit.py  test_physics_gate.py  test_pinn_uncertainty.py  test_policy_gate.py  test_structural_gate.py
tests/test_audit/: test_events.py
tests/test_evaluation/: __init__.py  test_ablations.py  test_metrics.py  test_scenarios.py
tests/test_governance/: test_deployment_modes.py
tests/test_graph/: __init__.py  test_backends.py  test_graphrag_backend.py
tests/test_ingestion/: __init__.py  test_dexpi_parser.py
tests/test_services/: __init__.py  test_orchestrator_svc.py
tests/test_tracking/: __init__.py  test_tracking.py
