[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anstkit"
version = "0.1.0"
description = "Reference implementation of an Agentic Neuro-Symbolic Twin (Triad Architecture): Agent + Graph grounding + PINN physics guardrail."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "ANST-Kit Contributors"}]
keywords = ["digital-twin", "agentic-ai", "GraphRAG", "PINN", "industrial-ai", "runtime-assurance"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
]

dependencies = [
  "numpy>=1.24",
  "networkx>=3.1",
  "pydantic>=2.0",
  "pydantic-settings>=2.0",
  "torch>=2.0",
]

[project.optional-dependencies]
graphrag = [
  "graphrag>=1.0",
  "pandas>=2.0",
]
services = [
  "fastapi>=0.109",
  "uvicorn>=0.27",
]
tracking = [
  "mlflow>=2.10",
]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.21",
  "httpx>=0.25",  # for FastAPI TestClient
]
dashboard = [
  "streamlit>=1.30",
  "plotly>=5.18",
]

[project.urls]
Repository = "https://github.com/anstkit/anstkit"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]  # Errors, pyflakes, warnings, isort
ignore = ["E501"]  # Line length (handled separately)

[tool.ruff.lint.isort]
known-first-party = ["anstkit"]

